[gd_scene load_steps=9 format=3 uid="uid://c4hpel84a8gbr"]

[ext_resource type="Script" path="res://player/scripts/Player.gd" id="1_urbe1"]
[ext_resource type="Script" path="res://player/scripts/PlayerInteractRay.gd" id="2_d28u2"]
[ext_resource type="Texture2D" uid="uid://b4kylnxxlhvfa" path="res://assets/crosshair001.png" id="3_3kk4d"]
[ext_resource type="Theme" uid="uid://cyp75cmf481l" path="res://ui/themes/default_theme.tres" id="3_cctpg"]
[ext_resource type="PackedScene" uid="uid://b14ul84gtqlit" path="res://player/scenes/Tasks.tscn" id="5_s3se3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6h5fd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3thq0"]
height = 1.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_st3wx"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_urbe1")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_6h5fd")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_3thq0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_st3wx")

[node name="CroucingRayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="InteractRay" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -4)
script = ExtResource("2_d28u2")

[node name="Prompt" type="Label" parent="Head/InteractRay"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 14.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_cctpg")
text = "Message [Key]"
horizontal_alignment = 1

[node name="Hand" type="Marker3D" parent="Head/InteractRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.79516)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3kk4d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Vitals" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -286.0
offset_right = 70.0
offset_bottom = -30.0
grow_vertical = 0
theme_override_constants/separation = 16

[node name="Oxygen" type="ProgressBar" parent="CanvasLayer/Vitals"]
custom_minimum_size = Vector2(32, 256)
layout_mode = 2
size_flags_horizontal = 0
value = 50.0
fill_mode = 3
show_percentage = false

[node name="Radiation" type="ProgressBar" parent="CanvasLayer/Vitals"]
custom_minimum_size = Vector2(32, 256)
layout_mode = 2
size_flags_horizontal = 0
value = 50.0
fill_mode = 3
show_percentage = false

[node name="Tasks" parent="CanvasLayer" instance=ExtResource("5_s3se3")]
